[project]
name = "docs"
version = "0.1.0"
description = "MHS Seals Documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-nav-weight>=0.2.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-callouts>=1.16.0",
]
